fixed map not showing

--- a/src/WorldTripLog.Web/wwwroot/css/site.css
+++ b/src/WorldTripLog.Web/wwwroot/css/site.css
@@ -33,3 +33,8 @@ body {
       display: none;
   }
 }
+
+#map {
+  width: 100%;
+  min-height: 400px;
+}
